--- a/index.html
+++ b/index.html
@@ -11,6 +11,120 @@
       crossorigin="anonymous"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <style>
+        body {
+  text-align: center;
+  font-family: "amatic sc";
+}
+.weather-app {
+  border-style: double;
+  border-radius: 30px 0px;
+  margin: 20px 10px;
+  padding-bottom: 40px;
+  max-width: 75%;
+  display: block;
+  margin: 20px auto;
+  border-color: crimson;
+}
+h1 {
+  color: burlywood;
+  margin: 20px;
+  font-size: 60px;
+  font-weight: 500;
+}
+p {
+  text-align: left;
+}
+.form {
+  font-size: 20px;
+  margin: 20px auto;
+  border-right: -60px;
+}
+
+.border {
+  padding: 10px 20px;
+}
+.btn-primary {
+  background: lemonchiffon;
+  border: none;
+  color: gray;
+  display: inline;
+  position: relative;
+  top: 5px;
+}
+.btn-secondary {
+  background-color: burlywood;
+  border: none;
+}
+.btn-primary:hover {
+  background: salmon;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  grid-gap: 20px;
+  max-width: 80%;
+  margin: 0 auto;
+}
+.current {
+  border-style: ridge;
+  border-color: burlywood;
+  border-radius: 20px 0px;
+  padding-top: 10px;
+  text-align: center;
+}
+.currentWeatherEmoji {
+  position: relative;
+  top: -10px;
+  font-size: 60px;
+}
+.add {
+  position: relative;
+  top: -20px;
+}
+#current-temp {
+  font-size: 40px;
+  font-weight: 900;
+}
+#tempc {
+  color: salmon;
+}
+#tempc:hover {
+  color: burlywood;
+  cursor: pointer;
+}
+#tempf {
+  color: salmon;
+}
+#tempf:hover {
+  color: burlywood;
+  cursor: pointer;
+}
+.fivedays {
+  text-align: center;
+  font-size: 22px;
+  padding-top: 12px;
+  padding-bottom: 10px;
+  border-style: ridge;
+  border-color: burlywood;
+}
+.next-weather-emoji {
+  font-size: 32px;
+}
+
+.city {
+  font-size: 28px;
+}
+.enter-city {
+  margin: 20px 0;
+  width: 50%;
+  padding: 5px;
+  border-radius: 5px;
+  border-style: dashed;
+  border-color: burlywood;
+}
+
+    </style>
   </head>
 
   <body>
@@ -56,8 +170,8 @@
         SUN <span class="next-weather-emoji">🌤</span> 20°C - 32°C <br>
       </div>
     </div>
-
-  </div>
+</div>
+<a href="https://github.com/hartesa/weather-forecast-app" target="_blank">Open-source code</a> by Hartesa
     <script src="./index.js"></script>
   </body>
 </html>
