Adding image and timezone details above it

--- a/index.html
+++ b/index.html
@@ -83,23 +83,25 @@
 
     <div class="weather-forecast">
       <div class="row">
-      <div class="col-2">
-        <div class="weather-forecast-date">Thu</div>
-         <img class="forecastWeatherEmoji" src="https://ssl.gstatic.com/onebox/weather/256/partly_cloudy.png" alt="Weather icon" >
-        <div class="weather-forecast-temp">
-          <span class="weather-forecast-temp-min">2°</span>-
-          <span class="weather-forecast-temp-max">18°</span>
+        <div class="col-2">
+          <div class="weather-forecast-date">Thu</div>
+          <img class="forecastWeatherEmoji" src="https://ssl.gstatic.com/onebox/weather/256/partly_cloudy.png" alt="Weather icon" >
+          <div class="weather-forecast-temp">
+            <span class="weather-forecast-temp-min">2°</span>-
+            <span class="weather-forecast-temp-max">18°</span>
+          </div>
         </div>
-        </div>
-      </div>
-
-      
+      </div>      
     </div>  
     <br>
     <hr id="hr2"> 
+    <div class="row" id="city-image-overlay">
+      <img id="city-image" src="https://assets.weforum.org/article/image/large_oJiIJtxAsQSP1eYnpNTTIMzjYoCmJo1oiC1mx2jWlN4.jpg" alt="City's Image">
     </div>
+    <span id="country-city">Country/City</span>
   </div>
-         
+</div>
+
     <div class="afternote">
        <img  src="src/github.svg" alt="github" class="github-icon">
       <a href="https://github.com/hartesa/weather-forecast-app" target="_blank" class="github-link">Open-source code</a>
