Correcting the temperature unit change function inside submit and current button

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="col-4 left">
       <span id="current-day-time"><span id="current-day"> Day </span><span id="current-time"> time </span></span>
       <br><span class="current-temp"><span id="current-temp">12</span><span id="temp-type">°C</span></span>
-      <img class="currentWeatherEmoji" src="https://ssl.gstatic.com/onebox/weather/256/partly_cloudy.png" alt="Weather icon" >
+      <br><img class="currentWeatherEmoji" src="https://ssl.gstatic.com/onebox/weather/256/partly_cloudy.png" alt="Weather icon" >
       <br><span id="current-weather">Partly Cloudy </span>
       <br> clouds: <span id="precipitation">15</span>%<br>
       humidity: <span id="humidity">50</span>%<br>
