--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+</style>
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -45,7 +49,7 @@
     <div class="container">
 <div class="weather-app">
   <br>
-  <h1><span class="city">country, city</span>'s Weather</h1>
+  <h1>WEATHER IN <span class="city">city</span></h1>
 
       <div id="inputForm">
           <form id="input-form"><input class="enter-city"
