placing placeholder font size

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <form id="input-form"><input class="enter-city"
           type="text"
           id="inputCity"
-          placeholder="Enter a city"
+          placeholder="enter a city"
         />   
         <button type="submit" class="btn btn-primary mb-2">
           Submit
