changing github image to icon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://kit.fontawesome.com/96c3cfc003.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -107,7 +108,7 @@
 </div>
 
     <div class="afternote">
-       <img  src="src/github.svg" alt="github" class="github-icon">
+       <i class="fa-brands fa-github github-icon" alt="github"></i>
       <a href="https://github.com/hartesa/weather-forecast-app" target="_blank" class="github-link">Open-source code</a>
        by Hartesa ©2022
     </div>     
